docs: backend - adicionando documentação via swagger de médicos e pacientes
